--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="/js/scripts1.js"></script>
+  <script src="/js/index-scripts.js"></script>
 </body>
 </html>
