--- a/landing.html
+++ b/landing.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University Event Hub</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
+    <!-- Include any necessary CSS or external libraries -->
 </head>
 <body>
+    <div id="root"></div>
     <header>
         <h1>University Event Hub</h1>
         <p>Solving the problem of scattered event systems</p>
@@ -28,5 +30,12 @@
     <footer>
         <p>&copy; 2024 University Event Hub</p>
     </footer>
+    <script>
+        const urlBase = "143.198.135.118";
+        const extension = "php";
+        
+        // Include your JavaScript code here
+        // The code you provided goes here
+    </script>
 </body>
 </html>
