--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-  <link rel="stylesheet" href="/css/index-styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Turntable</title>
+    <link rel="stylesheet" href="/css/index-styles.css">
 </head>
 <body>
-  <div id="root"></div>
-  <script src="/js/index-scripts.js"></script>
+    <div id="root">
+        <div class="container">
+            <div class="login-container">
+                <h1 class="title">Turntable</h1>
+                <div class="form-group" id="loginForm">
+                    <input id="loginName" class="input" type="text" placeholder="Username">
+                    <input id="loginPassword" class="input" type="password" placeholder="Password">
+                    <button id="loginButton" class="button">Login</button>
+                    <span id="loginResult"></span>
+                    <p class="toggleText">Don't have an account yet? <a id="registerLink" href="#">Register</a></p>
+                </div>
+                <div class="form-group" id="registerForm" style="display: none;">
+                    <input class="input" type="text" placeholder="First Name">
+                    <input class="input" type="text" placeholder="Last Name">
+                    <input class="input" type="text" placeholder="Username">
+                    <input class="input" type="text" placeholder="Email">
+                    <input class="input" type="password" placeholder="Password">
+                    <button id="registerButton" class="button">Register</button>
+                    <p class="toggleText">Already have an account? <a id="loginLink" href="#">Login</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="root"></div>
+    <script src="/js/index-scripts.js"></script>
 </body>
 </html>
+
