--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="form-group" id="loginForm">
                     <input id="loginName" class="input" type="text" placeholder="Username">
                     <input id="loginPassword" class="input" type="password" placeholder="Password">
-                    <button id="loginButton" class="button">Login</button>
+                    <button id="loginButton" class="button" onclick="doLogin();">Login</button>
                     <span id="loginResult"></span>
                     <p class="toggleText">Don't have an account yet? <a id="registerLink" href="#">Register</a></p>
                 </div>
