--- a/landing.html
+++ b/landing.html
@@ -12,6 +12,7 @@
     <header>
         <h1>University Event Hub</h1>
         <p>Solving the problem of scattered event systems</p>
+        <button onclick="doLogout()">Logout</button>
     </header>
     <section class="features">
         <div class="feature">
