--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
+    <script src="/js/scripts.js"></script>
     <!-- Include any necessary CSS or external libraries -->
 </head>
 <body>
