--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div id="root"></div>
-    <script src="/js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
