--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
     <div id="root"></div>
     <script src="./js/scripts.js"></script>
+    <script src="./js/landing-scripts.js"></script>
 </body>
 
 </html>
