--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turntable</title>
-    <link rel="stylesheet" href="./css/index-styles.css">
+    <link rel="stylesheet" href="/css/index-styles.css">
+    <style>
+        .active {
+            display: block;
+        }
 
+        .inactive {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
