added register js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <input id="registerFirstName" class="input" type="text" placeholder="First Name">
                     <input id="registerLastName" class="input" type="text" placeholder="Last Name">
                     <input id="registerLogin" class="input" type="text" placeholder="Username">
-                    <input class="input" type="text" placeholder="Email">
+                    <!-- <input class="input" type="text" placeholder="Email"> -->
                     <input id="registerPassword" class="input" type="password" placeholder="Password">
                     <button id="registerButton" class="button" onclick="doRegister();">Register</button>
                     <p class="toggleText">Already have an account? <button onclick="switchContent()">Login</button></p>
