--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                     <input id="loginName" class="input" type="text" placeholder="Username">
                     <input id="loginPassword" class="input" type="password" placeholder="Password">
                     <button id="loginButton" class="button" onclick="doLogin();">Login</button>
-                    <span id="loginResult"></span>
                     <p class="toggleText">Don't have an account yet? <button onclick="switchContent()">Register</button>
                     </p>
-
+                    <span id="loginResult"></span>
                 </div>
                 <div class="form-group inactive" id="registerForm">
                     <input id="registerFirstName" class="input" type="text" placeholder="First Name">
@@ -39,7 +38,7 @@
                     <input id="registerPassword" class="input" type="password" placeholder="Password">
                     <button id="registerButton" class="button" onclick="doRegister();">Register</button>
                     <p class="toggleText">Already have an account? <button onclick="switchContent()">Login</button></p>
-
+                    <span id="registerResult"></span>
                 </div>
             </div>
         </div>
