--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="form-group active" id="loginForm">
                     <input id="loginName" class="input" type="text" placeholder="Username">
                     <input id="loginPassword" class="input" type="password" placeholder="Password">
-                    <button id="loginButton" class="button" ">Login</button>
+                    <button id="loginButton" class="button" onclick="doLogin();">Login</button>
                     <p class="toggleText">Don't have an account yet? <button onclick="switchContent()">Register</button>
                     </p>
                     <span id="loginResult"></span>
