--- a/landing-admin.html
+++ b/landing-admin.html
@@ -21,7 +21,7 @@
         <!-- Navbar here -->
         <nav>
             <ul>
-                <li><a href="#" onclick="showContent('home', event)">Home</a></li>
+                <li><a href="#" onclick="showContent('home', event)">Admin Home</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
                 <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
