--- a/landing.html
+++ b/landing.html
@@ -21,12 +21,13 @@
         <!-- Navbar here -->
         <nav>
             <ul>
-                <li><a href="#" onclick="showContent('home', event)">Home</a></li>
+                <li><a href="#" onclick="showContent('home', event)">Student Home</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
                 <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
                 <li><a href="#" onclick="showContent('ratings', event)">Ratings</a></li>
                 <li><a href="#" onclick="doLogout()">Logout</a></li>
+
             </ul>
         </nav>
     </div>
