--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -21,7 +21,7 @@
         <!-- Navbar here -->
         <nav>
             <ul>
-                <li><a href="#" onclick="showContent('home', event)">SuperAdmin Home</a></li>
+                <li><a href="#" onclick="showContent('home', event)">Super-Admin Home</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
                 <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
