--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
             display: none;
         }
     </style>
+    <script>
+        function switchContent() {
+            var content1 = document.getElementById('loginForm');
+            var content2 = document.getElementById('registerForm');
+
+            if (content1.classList.contains('active')) {
+                content1.classList.remove('active');
+                content1.classList.add('inactive');
+                content2.classList.remove('inactive');
+                content2.classList.add('active');
+            } else {
+                content2.classList.remove('active');
+                content2.classList.add('inactive');
+                content1.classList.remove('inactive');
+                content1.classList.add('active');
+            }
+        }
+    </script>
 </head>
 
 <body>
