--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -22,6 +22,7 @@
         <nav>
             <ul>
                 <li><a href="#" onclick="showContent('home', event)">Super-Admin Home</a></li>
+                <li><a href="#" onclick="showContent('notifications', event)">Notifications</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
                 <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
@@ -34,6 +35,10 @@
         <div id="home" class="feature">
             <h2>Current Events</h2>
             <p>List of Events with information and ability to comment and rate</p>
+        </div>
+        <div id="notifications" class="feature" style="display: none;">
+            <h2>Notifications</h2>
+            <p>List of notifications such as event request to approve or deny</p>
         </div>
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
