--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -35,6 +35,7 @@
         <div id="home" class="feature">
             <h2>Current Events</h2>
             <p>List of Events with information and ability to comment and rate</p>
+            <div id="events-container"></div>
         </div>
         <div id="notifications" class="feature" style="display: none;">
             <h2>Notifications</h2>
