--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -7,6 +7,11 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
     <script src="/js/scripts.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchEvents();
+        });
+    </script>
 
 
 </head>
