--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -7,11 +7,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
     <script src="/js/scripts.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetchEvents();
-        });
-    </script>
+
 
 
 </head>
@@ -127,6 +123,12 @@
             });
         }
 
+    </script>
+    <script>
+        // Call the fetchEvents function when the page loads
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchEvents();
+        });
     </script>
 </body>
 
