changed fetchEvents js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -126,10 +126,10 @@
     </script>
     <script>
         // Call the fetchEvents function when the page loads
-
-        fetchEvents();
-
-    </script>
+        document.addEventListener("DOMContentLoaded", function() {
+          fetchEvents();
+        });
+      </script>
 </body>
 
 </html>
