--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="#" onclick="showContent('home', event)">Super-Admin Home</a></li>
-                <li><a href="#" onclick="showContent('notifications', event)">Notifications</a></li>
+                <li><a href="#" onclick="showContent('universities', event)">Universities</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
                 <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
@@ -36,9 +36,26 @@
             <p>List of Events with information and ability to comment and rate</p>
             <div id="events-container"></div>
         </div>
-        <div id="notifications" class="feature" style="display: none;">
-            <h2>Notifications</h2>
-            <p>List of notifications such as event request to approve or deny</p>
+        <div id="universities" class="feature" style="display: none;">
+            <h2>Add University</h2>
+            <form id="universityForm" onsubmit="submitUniversityForm()">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+
+                <label for="location">Location:</label>
+                <input type="text" id="location" name="location" required><br>
+
+                <label for="description">Description:</label>
+                <textarea id="description" name="description" required></textarea><br>
+
+                <label for="numberOfStudents">Number of Students:</label>
+                <input type="number" id="numberOfStudents" name="numberOfStudents" required><br>
+
+                <label for="pictures">Pictures:</label>
+                <input type="file" id="pictures" name="pictures" accept="image/*" multiple><br>
+
+                <button type="submit">Submit</button>
+            </form>
         </div>
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
@@ -128,7 +145,7 @@
             fetchEvents();
         });
     </script>
-    
+
 </body>
 
 </html>
