added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -56,6 +56,7 @@
 
                 <button type="submit">Submit</button>
             </form>
+            <span id="createUniversityResult"></span>
         </div>
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
