added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <script src="/js/scripts.js"></script>
     <link rel="stylesheet" href="/css/landing-styles.css">
 
 </head>
@@ -146,6 +145,7 @@
             fetchEvents();
         });
     </script>
+    <script src="./js/scripts.js"></script>
 
 </body>
 
