--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -58,6 +58,10 @@
             <span id="createUniversityResult"></span>
         </div>
         <div id="events" class="feature" style="display: none;">
+            <h2>Event Request</h2>
+            <form>
+                
+            </form>
             <h2>Create Event</h2>
             <form action="submit_event.php" method="post">
                 <label for="name">Name:</label><br>
