--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -24,8 +24,6 @@
                 <li><a href="#" onclick="showContent('home', event)">Admin Home</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
                 <li><a href="#" onclick="showContent('rso', event)">RSOs</a></li>
-                <li><a href="#" onclick="showContent('comments', event)">Comments</a></li>
-                <li><a href="#" onclick="showContent('ratings', event)">Ratings</a></li>
                 <li><a href="#" onclick="doLogout()">Logout</a></li>
             </ul>
         </nav>
@@ -59,23 +57,24 @@
                 <label for="contactPhone">Contact Phone:</label><br>
                 <input type="tel" id="contactPhone" name="contactPhone" required><br><br>
 
-                <label for="visibility">Visibility:</label><br>
+                <label for="visibility">Event Type:</label><br>
                 <select id="visibility" name="visibility" required>
-                    <option value="Public">Public</option>
-                    <option value="Private">Private</option>
+                    <option value="Public">Public (Will request SuperAdmin)</option>
+                    <option value="Private">Private (University)</option>
+                    <option value="RSO">RSO</option>
                 </select><br><br>
-                <select id="visibility" name="visibility" required>
-                    <option value="isRSOEvent">Registered Student Organization Event</option>
-                    <option value="notRSOEvent">Unregistered Student Organization Event</option>
-                </select><br><br>
-                <label for="organizerID">Organizer ID:</label><br>
-                <input type="number" id="organizerID" name="organizerID" required><br><br>
+                <!-- <label for="organizerID">Organizer ID:</label><br>
+                <input type="number" id="organizerID" name="organizerID" required><br><br> -->
 
                 <input type="submit" value="Submit">
             </form>
         </div>
         <div id="rso" class="feature" style="display: none;">
-            <h2>Registered Student Organizations</h2>
+            <h2>RSO Request</h2>
+            <form>
+                <p>Approve or deny students to both create and join RSO</p>
+            </form>
+            <h2>Add RSO</h2>
             <form action="submit_event.php" method="post">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" required><br><br>
@@ -85,14 +84,6 @@
 
                 <input type="submit" value="Submit">
             </form>
-        </div>
-        <div id="comments" class="feature" style="display: none;">
-            <h2>Comments</h2>
-            <p>Content for Comments section.</p>
-        </div>
-        <div id="ratings" class="feature" style="display: none;">
-            <h2>Ratings</h2>
-            <p>Content for Ratings section.</p>
         </div>
     </section>
     <footer>
