added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -36,7 +36,7 @@
         </div>
         <div id="universities" class="feature" style="display: none;">
             <h2>Add University</h2>
-            <form id="universityForm" onsubmit="submitUniversityForm()">
+            <form id="universityForm" onsubmit="submitUniversityForm();">
                 <label for="universityName">Name:</label>
                 <input type="text" id="universityName" name="name" required><br>
             
