--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -36,7 +36,7 @@
         </div>
         <div id="universities" class="feature" style="display: none;">
             <h2>Add University</h2>
-            <form id="universityForm" onsubmit="submitUniversityForm();">
+            <form id="universityForm" >
                 <label for="universityName">Name:</label>
                 <input type="text" id="universityName" name="name" required><br>
             
@@ -49,7 +49,7 @@
                 <label for="numberOfStudents">Number of Students:</label>
                 <input type="number" id="numberOfStudents" name="numberOfStudents" required><br>
             
-                <input type="submit" value="Submit">
+                <button class="button" onclick="submitUniversityForm();">Login</button>
             </form>
             <span id="createUniversityResult"></span>
         </div>
