--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
-
+    <script src="./js/scripts.js"></script>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
                 <label for="numberOfStudents">Number of Students:</label>
                 <input type="number" id="numberOfStudents" name="numberOfStudents" required><br>
             
-                <button class="button" onclick="submitUniversityForm();">Login</button>
+                <button class="button" onclick="submitUniversityForm()">Login</button>
             </form>
             <span id="createUniversityResult"></span>
         </div>
@@ -105,7 +105,7 @@
             fetchEvents();
         });
     </script>
-    <script src="./js/scripts.js"></script>
+    
 
 </body>
 
