--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="/css/landing-styles.css">
-    <script src="./js/scripts.js"></script>
+    
 </head>
 
 <body>
+    <script src="/js/scripts.js"></script>
     <div id="root"></div>
     <header>
         <h1>University Event Hub</h1>
@@ -105,6 +106,7 @@
             fetchEvents();
         });
     </script>
+
     
 
 </body>
