added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -85,6 +85,7 @@
             </form>
 
             <div id="addUserResult"></div>
+            <div id="jsonPayload"></div>
         </div>
     </section>
     <footer>
