added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -85,7 +85,9 @@
             </form>
 
             <div id="addUserResult"></div>
-            <div id="jsonPayload"></div>
+            <button type="button" onclick="printJsonPayload()">Print JSON Payload</button>
+
+            <pre id="jsonPayload"></pre>
         </div>
     </section>
     <footer>
