--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -65,29 +65,30 @@
         </div>
         <div id="users" class="feature" style="display: none;">
             <form id="userForm">
-                <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" required><br><br>
+                <label for="userFirstName">First Name:</label>
+                <input type="text" id="userFirstName" required><br><br>
 
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" required><br><br>
+                <label for="userLastName">Last Name:</label>
+                <input type="text" id="userLastName" required><br><br>
 
-                <label for="login">Login:</label>
-                <input type="text" id="login" required><br><br>
+                <label for="userLogin">Login:</label>
+                <input type="text" id="userLogin" required><br><br>
 
-                <label for="password">Password:</label>
-                <input type="text" id="password" required><br><br>
+                <label for="userPassword">Password:</label>
+                <input type="text" id="userPassword" required><br><br>
 
                 <label for="universityName">University Name:</label>
                 <input type="text" id="universityName" required><br><br>
 
                 <button type="button" onclick="submitStudentForm()">Submit as Student</button>
                 <button type="button" onclick="submitAdminForm()">Submit as Admin</button>
+                
+                
             </form>
 
             <div id="addUserResult"></div>
-            <button type="button" onclick="printJsonPayload()">Print JSON Payload</button>
-
             <pre id="jsonPayload"></pre>
+
         </div>
     </section>
     <footer>
