added University js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -77,8 +77,8 @@
                 <label for="userPassword">Password:</label>
                 <input type="text" id="userPassword" required><br><br>
 
-                <label for="universityName">University Name:</label>
-                <input type="text" id="universityName" required><br><br>
+                <label for="userUniversityName">University Name:</label>
+                <input type="text" id="userUniversityName" required><br><br>
 
                 <button type="button" onclick="submitStudentForm()">Submit as Student</button>
                 <button type="button" onclick="submitAdminForm()">Submit as Admin</button>
