added University js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -80,6 +80,8 @@
                 <input type="text" id="rsoName" name="rsoName" required><br><br>
                 <button type="button" onclick="addRSO()">Submit</button>
             </form>
+            <pre id="RsoReval"></pre>
+            <pre id="addRsoResult"></pre>
         </div>
     </section>
     <footer>
