added University js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -31,6 +31,7 @@
     <section class="features">
         <div id="home" class="feature">
             <h2>Current Events</h2>
+            <pre id="userName"></pre>
             <p>List of Events with information and ability to comment and rate</p>
         </div>
         <div id="events" class="feature" style="display: none;">
@@ -105,6 +106,9 @@
             });
         }
 
+    </script>
+    <script>
+        window.onload = readCookie;
     </script>
 </body>
 
