added University js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -107,9 +107,9 @@
         }
 
     </script>
-    <script>
+    <!-- <script>
         window.onload = readCookie;
-    </script>
+    </script> -->
 </body>
 
 </html>
