--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -66,6 +66,7 @@
                 <input type="text" id="name" name="name" required><br><br>
                 <input type="submit" value="Submit">
             </form>
+            <pre id="testJoinRSO"></pre>
 
         </div>
     </section>
