added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -18,6 +18,7 @@
         <h1>University Event Hub</h1>
         <p>Solving the problem of scattered event systems</p>
         <pre id="testJoinRSO"></pre>
+        <pre id="joinRSOResult"></pre>
     </header>
     <div class="navbar">
         <!-- Navbar here -->
