added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -37,6 +37,7 @@
             <h2>Current Events</h2>
             <p>List of Events with information and ability to comment and rate</p>
             <p> ADD & DELETE Comments and Rate Events</p>
+            <div id="events-container"></div>
         </div>
         <div id="events" class="feature" style="display: none;">
 
