--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -33,6 +33,7 @@
             <h2>Current Events</h2>
             <pre id="userName"></pre>
             <p>List of Events with information and ability to comment and rate</p>
+            <div id="events-container"></div>
         </div>
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
