added joinRSO js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -100,17 +100,17 @@
 
         // Include your JavaScript code here
 
-        function showContent(contentId, event) {
-            event.preventDefault(); // Prevent default behavior of anchor tag
-            const features = document.querySelectorAll('.feature');
-            features.forEach(feature => {
-                if (feature.id === contentId) {
-                    feature.style.display = 'block';
-                } else {
-                    feature.style.display = 'none';
-                }
-            });
-        }
+        // function showContent(contentId, event) {
+        //     event.preventDefault(); // Prevent default behavior of anchor tag
+        //     const features = document.querySelectorAll('.feature');
+        //     features.forEach(feature => {
+        //         if (feature.id === contentId) {
+        //             feature.style.display = 'block';
+        //         } else {
+        //             feature.style.display = 'none';
+        //         }
+        //     });
+        // }
 
     </script>
     <script>
