added joinRSO js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -113,12 +113,12 @@
         // }
 
     </script>
-    <script>
+    <!-- <script>
         // Call the fetchEvents function when the page loads
         document.addEventListener("DOMContentLoaded", function () {
             fetchEvents();
         });
-    </script>
+    </script> -->
     <script>
         function submitStudentForm() {
             submitForm("Student");
