added joinRSO js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -64,6 +64,7 @@
             <form></form>
         </div>
         <div id="users" class="feature" style="display: none;">
+            <h2>Add User</h2>
             <form id="userForm">
                 <label for="userFirstName">First Name:</label>
                 <input type="text" id="userFirstName" required><br><br>
@@ -82,8 +83,8 @@
 
                 <button type="button" onclick="submitStudentForm()">Submit as Student</button>
                 <button type="button" onclick="submitAdminForm()">Submit as Admin</button>
-                
-                
+
+
             </form>
 
             <div id="addUserResult"></div>
