--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -71,7 +71,8 @@
                 <!-- <label for="organizerID">Organizer ID:</label><br>
                 <input type="number" id="organizerID" name="organizerID" required><br><br> -->
 
-                <input type="submit" value="Submit">
+                <!-- <input type="submit" value="Submit"> -->
+                <button type="button" onclick="addEvent()">Submit</button>
             </form>
         </div>
         <div id="rso" class="feature" style="display: none;">
