added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -16,6 +16,7 @@
     <header>
         <h1>University Event Hub</h1>
         <p>Solving the problem of scattered event systems</p>
+        <pre id="addEventReval"></pre>
     </header>
     <div class="navbar">
         <!-- Navbar here -->
