added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -39,32 +39,32 @@
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
             <form action="submit_event.php" method="post">
-                <label for="event_name">Name:</label><br>
-                <input type="text" id="event_name" name="event_name" required><br><br>
+                <label for="eventName">Name:</label><br>
+                <input type="text" id="eventName" name="eventName" required><br><br>
 
-                <label for="category">Category:</label><br>
-                <input type="text" id="category" name="category" required><br><br>
+                <label for="eventCategory">Category:</label><br>
+                <input type="text" id="eventCategory" name="eventCategory" required><br><br>
 
-                <label for="description">Description:</label><br>
-                <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+                <label for="eventDescription">Description:</label><br>
+                <textarea id="eventDescription" name="eventDescription" rows="4" cols="50" required></textarea><br><br>
 
-                <label for="time">Time:</label><br>
-                <input type="time" id="time" name="time" required><br><br>
+                <label for="eventTime">Time:</label><br>
+                <input type="time" id="eventTime" name="eventTime" required><br><br>
 
-                <label for="date">Date:</label><br>
-                <input type="date" id="date" name="date" required><br><br>
+                <label for="eventDate">Date:</label><br>
+                <input type="date" id="eventDate" name="eventDate" required><br><br>
 
-                <label for="location">Location:</label><br>
-                <input type="text" id="location" name="location" required><br><br>
+                <label for="eventLocation">Location:</label><br>
+                <input type="text" id="eventLocation" name="eventLocation" required><br><br>
 
-                <label for="contact_phone">Contact Phone:</label><br>
-                <input type="tel" id="contact_phone" name="contact_phone" required><br><br>
+                <label for="eventPhone">Contact Phone:</label><br>
+                <input type="tel" id="eventPhone" name="eventPhone" required><br><br>
 
-                <label for="university_id">University ID:</label><br>
-                <input type="number" id="university_id" name="university_id" required><br><br>
+                <label for="eventUniversity">University ID:</label><br>
+                <input type="number" id="eventUniversity" name="eventUniversity" required><br><br>
 
-                <label for="event_type">Event Type:</label><br>
-                <select id="event_type" name="event_type" required>
+                <label for="eventType">Event Type:</label><br>
+                <select id="eventType" name="eventType" required>
                     <option value="Public">Public (Will request SuperAdmin)</option>
                     <option value="Private">Private (University)</option>
                     <option value="RSO">RSO</option>
