added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -38,7 +38,7 @@
         </div>
         <div id="events" class="feature" style="display: none;">
             <h2>Create Event</h2>
-            <form action="submit_event.php" method="post">
+            <form>
                 <label for="eventName">Name:</label><br>
                 <input type="text" id="eventName" name="eventName" required><br><br>
 
@@ -75,6 +75,7 @@
                 <!-- <input type="submit" value="Submit"> -->
                 <button type="button" onclick="addEvent()">Submit</button>
                 <pre id="addEventReval"></pre>
+                <pre id="addEventTest"></pre>
             </form>
         </div>
         <div id="rso" class="feature" style="display: none;">
