added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -67,7 +67,7 @@
                 <select id="eventType" name="eventType" required>
                     <option value="Public">Public (Will request SuperAdmin)</option>
                     <option value="Private">Private (University)</option>
-                    <option value="RSO">RSO</option>
+                    <option value="RSO">RSO (Registered Student Organization)</option>
                 </select><br><br>
                 <!-- <label for="organizerID">Organizer ID:</label><br>
                 <input type="number" id="organizerID" name="organizerID" required><br><br> -->
