--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -54,7 +54,7 @@
 
             <h2>RSO List</h2>
             <form>
-                <div id="createUniversityResult" class="table-container">
+                <div id="listRsoResult" class="table-container">
                     <!-- RSO list will be displayed here -->
                 </div>
                 
