--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -69,6 +69,9 @@
                     <option value="Private">Private (University)</option>
                     <option value="RSO">RSO (Registered Student Organization)</option>
                 </select><br><br>
+                <div id="RsoFormSelection" class="table-container">
+                    <!-- RSO list will be displayed here -->
+                </div>
                 <!-- <label for="organizerID">Organizer ID:</label><br>
                 <input type="number" id="organizerID" name="organizerID" required><br><br> -->
 
