added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -16,7 +16,7 @@
     <header>
         <h1>University Event Hub</h1>
         <p>Solving the problem of scattered event systems</p>
-        
+
     </header>
     <div class="navbar">
         <!-- Navbar here -->
@@ -117,6 +117,10 @@
             });
         }
 
+    </script>
+    <script>
+        // Call the fetchEvents function when the page loads
+        window.onload = RsoFormSelection();
     </script>
     <!-- <script>
         window.onload = readCookie;
