added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -69,9 +69,11 @@
                     <option value="Private">Private (University)</option>
                     <option value="RSO">RSO (Registered Student Organization)</option>
                 </select><br><br>
-                <div id="rsoSelectionList" class="table-container">
+                <select id="rsoSelectionList" name="rsoSelectionList" required>
                     <!-- RSO list will be displayed here -->
-                </div>
+                </select>
+
+
                 <!-- <label for="organizerID">Organizer ID:</label><br>
                 <input type="number" id="organizerID" name="organizerID" required><br><br> -->
 
