added joinRSO js

--- a/admin_landing_page.html
+++ b/admin_landing_page.html
@@ -64,13 +64,13 @@
                 <input type="number" id="eventUniversity" name="eventUniversity" required><br><br>
 
                 <label for="eventType">Event Type:</label><br>
-                <select id="eventType" name="eventType" required style="display: none;">
+                <select id="eventType" name="eventType" required>
                     <option value="Public">Public (Will request SuperAdmin)</option>
                     <option value="Private">Private (University)</option>
                     <option value="RSO">RSO (Registered Student Organization)</option>
                 </select><br><br>
 
-                <select id="rsoSelectionList" name="rsoSelectionList" required>
+                <select id="rsoSelectionList" name="rsoSelectionList" required style="display: none;">
                     <!-- RSO list will be displayed here -->
                 </select>
 
